[workspace]

# Here we declare that this is a workspace, containing several crates
# within it.
members = [
    "caret",
    "retry-error",
    "tor-rtcompat",
    "tor-rtmock",
    "tor-llcrypto",
    "tor-protover",
    "tor-bytes",
    "tor-socksproto",
    "tor-checkable",
    "tor-cert",
    "tor-linkspec",
    "tor-cell",
    "tor-proto",
    "tor-netdoc",
    "tor-consdiff",
    "tor-netdir",
    "tor-chanmgr",
    "tor-circmgr",
    "tor-dirclient",
    "tor-dirmgr",
    "tor-config",
    "tor-client",
    "tor-units",
    "arti"
    ]

resolver = "2"