[workspace]

# Here we declare that this is a workspace, containing several crates
# within it.
#
# Please keep this list toplogically sorted by dependency relation, so
# that every crate appears _before_ any other crate that depends on it.
members = [
    "caret",
    "retry-error",
    "tor-units",
    "tor-rtcompat",
    "tor-rtmock",
    "tor-llcrypto",
    "tor-protover",
    "tor-bytes",
    "tor-socksproto",
    "tor-checkable",
    "tor-cert",
    "tor-linkspec",
    "tor-cell",
    "tor-proto",
    "tor-netdoc",
    "tor-consdiff",
    "tor-netdir",
    "tor-persist",
    "tor-chanmgr",
    "tor-circmgr",
    "tor-dirclient",
    "tor-dirmgr",
    "tor-config",
    "tor-client",
    "arti"
    ]

resolver = "2"