[workspace]

# Here we declare that this is a workspace, containing several crates
# within it.
#
# Please keep this list toplogically sorted by dependency relation, so
# that every crate appears _before_ any other crate that depends on it.
members = [
    "crates/caret",
    "crates/retry-error",
    "crates/tor-units",
    "crates/tor-rtcompat",
    "crates/tor-rtmock",
    "crates/tor-llcrypto",
    "crates/tor-protover",
    "crates/tor-bytes",
    "crates/tor-socksproto",
    "crates/tor-checkable",
    "crates/tor-cert",
    "crates/tor-linkspec",
    "crates/tor-cell",
    "crates/tor-proto",
    "crates/tor-netdoc",
    "crates/tor-consdiff",
    "crates/tor-netdir",
    "crates/tor-persist",
    "crates/tor-chanmgr",
    "crates/tor-circmgr",
    "crates/tor-dirclient",
    "crates/tor-dirmgr",
    "crates/tor-config",
    "crates/tor-client",
    "crates/arti"
]

resolver = "2"