[package]
name = "client-demo"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tor-circmgr = { path="../tor-circmgr", version= "*" }
tor-chanmgr = { path="../tor-chanmgr", version= "*" }
tor-netdir = { path="../tor-netdir", version= "*" }
tor-netdoc = { path="../tor-netdoc", version= "*" }
tor-proto = { path="../tor-proto", version= "*" }
tor-rtcompat = { path="../tor-rtcompat", version= "*" }
tor-socksproto = { path="../tor-socksproto", version= "*" }
tor-dirclient = { path="../tor-dirclient", version = "*" }
tor-linkspec = { path="../tor-linkspec", version= "*" }

anyhow = "1.0.34"
async-native-tls = "0.3.3"
futures = "0.3.8"
log = "0.4.11"
native-tls = "0.2.6"
rand = "0.7.3"
simple-logging = "2.0.2"
thiserror = "1.0.22"
argh = "0.1.4"
