[package]
name = "tor-bytes"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tor-llcrypto = { path="../tor-llcrypto" }

arrayref = "0.3.6"
# Can't upgrade this or futures-codec will break.
bytes = "0.5.6"
crypto-mac = "0.10.0"
generic-array = "0.14.4"
signature = "1.2.2"
thiserror = "1.0.23"

[dev-dependencies]
hex-literal = "0.3.1"

