[package]
name = "tor-bytes"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Helpers for encoding and decoding byte-orientted data, as used by Tor"
keywords = [ "tor", "arti", "encoding" ]
categories = [ "parsing", "encoding" ]

[dependencies]
tor-llcrypto = { path="../tor-llcrypto" }

arrayref = "0.3.6"
bytes = "1.0.1"
crypto-mac = "0.11.0"
generic-array = "0.14.4"
signature = "1.3.0"
thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"

