[package]
name = "tor-cell"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Encode and decode Tor cells and messages"
keywords = [ "tor", "arti", "protocol" ]

[dependencies]
caret = { path="../caret" }
tor-llcrypto = { path="../tor-llcrypto" }
tor-bytes = { path="../tor-bytes" }
tor-cert = { path="../tor-cert" }
tor-linkspec = { path="../tor-linkspec" }

arrayref = "0.3.6"
bitflags = "1.2.1"
bytes = "1.0.1"
rand = "0.7.3"
rand_core = "0.5.1"
thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.3"
