[package]
name = "tor-cell"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Encode and decode Tor cells and messages"
keywords = [ "tor", "arti", "protocol" ]
categories = [ "parser-implementations", "network-programming" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
caret = { path="../caret", version="0.0.0" }
tor-llcrypto = { path="../tor-llcrypto", version="0.0.0" }
tor-bytes = { path="../tor-bytes", version="0.0.0" }
tor-cert = { path="../tor-cert", version="0.0.0" }
tor-linkspec = { path="../tor-linkspec", version="0.0.0" }

arrayref = "0.3.6"
bitflags = "1.2.1"
bytes = "1.0.1"
rand = "0.8.3"
thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.3"
