[package]
name = "tor-cert"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
caret = { path="../caret" }
tor-llcrypto = { path="../tor-llcrypto" }
tor-bytes = { path="../tor-bytes" }
tor-checkable = { path="../tor-checkable" }

digest = "0.9.0"
signature = "1.3.0"

[dev-dependencies]
base64 = "0.13.0"
hex-literal = "0.3.1"
