[package]
name = "tor-chanmgr"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = [ "tokio" ]

async-std = [ "async-native-tls" ]
tokio = [ "tokio-util", "tokio-native-tls" ]

[dependencies]
tor-rtcompat = { path="../tor-rtcompat", version= "*", default-features=false }
tor-proto = { path="../tor-proto", version= "*" }
tor-linkspec = { path="../tor-linkspec", version= "*" }
tor-llcrypto = { path="../tor-llcrypto", version= "*" }

anyhow = "1.0.38"
async-trait = "0.1.42"
event-listener = "2.5.1"
futures = "0.3.13"
log = "0.4.14"
thiserror = "1.0.24"
tokio-util = { version = "0.6.3", features = [ "compat" ], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
async-native-tls = { version = "0.3.3", optional = true }
native-tls = { version = "0.2.7" }

[dev-dependencies]
futures-await-test = "0.3.0"
