[package]
name = "tor-chanmgr"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Manage a set of connections to the Tor network"
keywords = [ "tor", "arti", "async" ]

[features]

[dependencies]
tor-rtcompat = { path="../tor-rtcompat", version= "*", default-features=false }
tor-proto = { path="../tor-proto", version= "*" }
tor-linkspec = { path="../tor-linkspec", version= "*" }
tor-llcrypto = { path="../tor-llcrypto", version= "*" }

async-trait = "0.1.48"
event-listener = "2.5.1"
futures = "0.3.13"
log = "0.4.14"
native-tls = "0.2.7"
thiserror = "1.0.24"

[dev-dependencies]
futures-await-test = "0.3.0"
hex-literal = "0.3.1"
