[package]
name = "tor-checkable"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Types to ensure that signed or time-bound data is validated before use"
keywords = [ "tor", "arti", "typestate" ]
categories = [ "cryptography", "rust-patterns" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
tor-llcrypto = { path="../tor-llcrypto", version = "*" }

signature = "1.3.0"
thiserror = "1.0.24"


