[package]
name = "tor-circmgr"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Manage a set of anonymous circuits over the Tor network"
keywords = [ "tor", "arti", "async" ]
categories = [ "network-programming", "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
experimental-api = []

[dependencies]
tor-chanmgr = { path="../tor-chanmgr", version="0.0.0" }
tor-netdir = { path="../tor-netdir", version="0.0.0" }
tor-netdoc = { path="../tor-netdoc", version="0.0.0" }
tor-proto = { path="../tor-proto", version="0.0.0" }
retry-error = { path="../retry-error", version="0.0.0" }
tor-linkspec = { path="../tor-linkspec", version="0.0.0" }
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0" }

async-trait = "0.1.48"
futures = "0.3.13"
rand = "0.8.3"
log = "0.4.14"
pin-project = "1.0.5"
thiserror = "1.0.24"
weak-table = "0.3.0"

[dev-dependencies]
futures-await-test = "0.3.0"
itertools = "0.10.1"
tor-rtmock = { path="../tor-rtmock", version="0.0.0" }
tor-netdir = { path="../tor-netdir", version="0.0.0", features=["testing"] }
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0", features=["tokio"] }
