[package]
name = "tor-client"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Library for connecting to the Tor network as an anonymous client"
keywords = [ "tor", "arti", "privacy", "anonymity", "networking" ]
categories = [ "network-programming", "cryptography" ]

[features]
default = [ "tokio" ]
async-std = [ "tor-rtcompat/async-std" ]
tokio = [ "tor-rtcompat/tokio" ]
experimental-api = []

[dependencies]
tor-circmgr = { path="../tor-circmgr", version= "*" }
tor-chanmgr = { path="../tor-chanmgr", version= "*" }
tor-dirmgr = { path="../tor-dirmgr", version="*" }
tor-netdir = { path="../tor-netdir", version= "*" }
tor-netdoc = { path="../tor-netdoc", version= "*" }
tor-proto = { path="../tor-proto", version= "*" }
tor-rtcompat = { path="../tor-rtcompat", version= "*", default-features=false }
tor-dirclient = { path="../tor-dirclient", version = "*" }
tor-linkspec = { path="../tor-linkspec", version = "*" }

anyhow = "1.0.38"
config = { version = "0.11.0", default-features = false }
futures = "0.3.13"
log = "0.4.14"
thiserror = "1.0.24"
