[package]
name = "arti-tor-client"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Library for connecting to the Tor network as an anonymous client"
keywords = [ "tor", "arti", "privacy", "anonymity", "networking" ]
categories = [ "network-programming", "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = [ "tokio" ]
async-std = [ "tor-rtcompat/async-std" ]
tokio = [ "tor-rtcompat/tokio" ]
experimental-api = []

[dependencies]
tor-circmgr = { path="../tor-circmgr", version="0.0.0" }
tor-chanmgr = { path="../tor-chanmgr", version="0.0.0" }
tor-dirmgr = { path="../tor-dirmgr", version="0.0.0" }
tor-persist = { path="../tor-persist", version="0.0.0" }
tor-proto = { path="../tor-proto", version="0.0.0" }
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0" }

anyhow = "1.0.38"
futures = "0.3.13"
log = "0.4.14"
thiserror = "1.0.24"

[dev-dependencies]
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0", features=["tokio"] }
