[package]
name = "tor-config"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
config = {version="0.10.1", features=["toml"]}
directories = "3.0.1"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
once_cell = "1.5.2"
shellexpand = "2.1.0"
regex = "1.4.3"
log = "0.4.14"
thiserror = "1.0.24"

[dev-dependencies]
dirs = "3.0.1"
