[package]
name = "tor-config"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Configuration types and code used by the Arti Tor implementation"
keywords = [ "tor", "arti" ]

[dependencies]
config = {version="0.10.1", default-features=false, features=["toml"]}
directories = "3.0.1"
serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5.8"
once_cell = "1.7.2"
shellexpand = "2.1.0"
regex = { version = "1.4.3", default-features=false, features=["std"] }
log = "0.4.14"
thiserror = "1.0.24"

[dev-dependencies]
dirs = "3.0.1"
