[package]
name = "tor-consdiff"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Handle the consensus-diff format used in the Tor directory protocol"

[features]
default = []
slow-diff-apply = []

[dependencies]

tor-llcrypto = { path="../tor-llcrypto", version= "*" }

digest = "0.9.0"
hex = "0.4.3"
thiserror = "1.0.24"
