[package]
name = "tor-consdiff"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Handle the consensus-diff format used in the Tor directory protocol"
keywords = [ "tor", "arti", "diff" ]
categories = [ "parser-implementations", "network-programming" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
slow-diff-apply = []

[dependencies]

tor-llcrypto = { path="../tor-llcrypto", version= "*" }

digest = "0.9.0"
hex = "0.4.3"
thiserror = "1.0.24"
