[package]
name = "tor-decompress"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.38"
#async-trait = "0.1.41"
base64 = "0.13.0"
# chrono = "0.4.19"
#event-listener = "2.5.1"
futures = "0.3.13"
hex = "0.4.2"
http = "0.2.3"
httpdate = "0.3.2"
httparse = "1.3.5"
miniz_oxide = "0.4.3"
#rand = "0.7.3"
log = "0.4.14"
thiserror = "1.0.24"
xz2 = "0.1.6"
zstd = "0.6.0"

