[package]
name = "tor-decompress"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Wrapper for data compression formats used by the Tor directory protocols"
keywords = [ "tor", "arti", "compression" ]

[dependencies]
miniz_oxide = "0.4.4"
thiserror = "1.0.24"
xz2 = "0.1.6"
zstd = "0.7.0"
