[package]
name = "tor-dirclient"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"

[dependencies]
tor-circmgr = { path="../tor-circmgr", version= "*" }
tor-chanmgr = { path="../tor-chanmgr", version= "*", default-features=false }
tor-decompress = { path="../tor-decompress", version= "*", default-features=false }
tor-llcrypto = { path="../tor-llcrypto", version= "*" }
tor-proto = { path="../tor-proto", version= "*" }
tor-netdoc = { path="../tor-netdoc", version= "*" }
tor-netdir = { path="../tor-netdir", version= "*" }
tor-rtcompat = { path="../tor-rtcompat", version= "*", default-features=false }

anyhow = "1.0.38"
base64 = "0.13.0"
futures = "0.3.13"
hex = "0.4.3"
http = "0.2.3"
httpdate = "0.3.2"
httparse = "1.3.5"
log = "0.4.14"
thiserror = "1.0.24"

[dev-dependencies]
futures-await-test = "0.3.0"
