[package]
name = "tor-dirclient"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Downloads specific Tor network directory objects over the Tor network"
keywords = [ "tor", "arti", "download", "async" ]
categories = [ "network-programming", "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = [ "xz", "zstd" ]
xz = ["async-compression/xz"]
zstd = ["async-compression/zstd"]

[dependencies]
tor-circmgr = { path="../tor-circmgr", version="0.0.0" }
tor-llcrypto = { path="../tor-llcrypto", version="0.0.0" }
tor-proto = { path="../tor-proto", version="0.0.0" }
tor-netdoc = { path="../tor-netdoc", version="0.0.0" }
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0" }

async-compression = { version = "0.3.7", features=["futures-io", "zlib"] }
anyhow = "1.0.38"
base64 = "0.13.0"
futures = "0.3.13"
hex = "0.4.3"
http = "0.2.3"
httpdate = "1.0.0"
httparse = "1.4.0"
log = "0.4.14"
memchr = "2.4.0"
thiserror = "1.0.24"

[dev-dependencies]
futures-await-test = "0.3.0"
tor-rtmock = { path="../tor-rtmock", version="0.0.0" }
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0", features=["tokio"] }

