[package]
name = "tor-dirmgr"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Bootstrap and update an accurate Tor network directory"
keywords = [ "tor", "arti", "download", "async" ]
categories = [ "network-programming", "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = [ "mmap" ]
mmap = [ "memmap" ]

[dependencies]
retry-error = { path="../retry-error", version= "*" }
tor-checkable = { path="../tor-checkable", version= "*" }
tor-circmgr = { path="../tor-circmgr", version= "*" }
tor-consdiff = { path="../tor-consdiff", version= "*" }
tor-dirclient = { path="../tor-dirclient", version= "*" }
tor-netdir = { path="../tor-netdir", version= "*" }
tor-netdoc = { path="../tor-netdoc", version= "*" }
tor-llcrypto = { path="../tor-llcrypto", version= "*" }
tor-rtcompat = { path="../tor-rtcompat", version= "*", default-features=false }

anyhow = "1.0.38"
async-trait = "0.1.48"
base64 = "0.13.0"
chrono = "0.4.19"
digest = "0.9.0"
directories = "3.0.1"
futures = "0.3.13"
fslock = "0.1.6"
hex = "0.4.3"
log = "0.4.14"
memmap = { version="0.7.0", optional=true }
rand = "0.8.3"
rusqlite = { version = "0.25.0", features = ["chrono"] }
serde = { version = "1.0.124", features = ["derive"] }
thiserror = "1.0.24"
humantime-serde = "1.0.1"

[dev-dependencies]
futures-await-test = "0.3.0"
hex-literal = "0.3.1"
tempdir = "0.3.7"
