[package]
name = "tor-linkspec"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Parts of the Tor protocol that indicate specific relays on the network"
keywords = [ "tor", "arti" ]
categories = [ "network-programming" ]

[dependencies]
tor-llcrypto = { path="../tor-llcrypto" }
tor-bytes = { path="../tor-bytes" }
tor-protover = { path="../tor-protover" }

[dev-dependencies]
hex-literal = "0.3.1"
