[package]
name = "tor-linkspec"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Parts of the Tor protocol that indicate specific relays on the network"
keywords = [ "tor", "arti" ]
categories = [ "network-programming" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
tor-llcrypto = { path="../tor-llcrypto", version="0.0.0" }
tor-bytes = { path="../tor-bytes", version="0.0.0" }
tor-protover = { path="../tor-protover", version="0.0.0" }

[dev-dependencies]
hex-literal = "0.3.1"
