[package]
name = "tor-llcrypto"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
aes-ctr = "0.6.0"
arrayref = "0.3.6"
base64 = "0.13.0"
curve25519-dalek = "3.0.2"
digest = "0.9.0"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
hex = "0.4.2"
num-bigint = "0.3.1"
num-traits = "0.2.14"
rsa = "0.3.0"
sha-1 = "0.9.3"
sha2 = "0.9.3"
sha3 = "0.9.1"
serde = "1.0.123"
signature = "1.3.0"
simple_asn1 = "0.5.1"
subtle = "2.4.0"
x25519-dalek = "1.1.0"
zeroize = "1.2.0"

[dev-dependencies]
hex-literal = "0.3.1"
rand = "0.7.3"
cipher = "0.2.5"
serde_test = "1.0.123"

# This is a magic crate that runs the tests and checks the format
# before it lets you commit or push.  It installs git hooks for this whenever
# you say "cargo test".
[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "run-cargo-test",
            "run-cargo-fmt", "run-for-all" ]
