[package]
name = "tor-llcrypto"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Low level cryptography wrappers used by Tor"
keywords = [ "tor", "arti", "cryptography" ]
categories = [ "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
aes = { version = "0.7.0", features = ["ctr"] }
arrayref = "0.3.6"
base64 = "0.13.0"
curve25519-dalek = "3.1.0"
digest = "0.9.0"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
hex = "0.4.3"
rand_core = "0.6.2"
old_rand_core = { package = "rand_core", version = "0.5.1" }
rsa = "0.5.0"
sha-1 = "0.9.4"
sha2 = "0.9.3"
sha3 = "0.9.1"
serde = "1.0.124"
signature = "1.3.0"
simple_asn1 = "0.5.1"
subtle = "2.4.0"
x25519-dalek = "1.1.1"
zeroize = "1.3.0"
thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"
rand = "0.8.3"
cipher = "0.3.0"
serde_test = "1.0.124"

# This is a magic crate that runs the tests and checks the format
# before it lets you commit or push.  It installs git hooks for this whenever
# you say "cargo test".
[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "run-cargo-test",
            "run-cargo-fmt", "run-for-all" ]
