[package]
name = "tor-netdir"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
caret = { path = "../caret", version= "*" }
tor-checkable = { path="../tor-checkable", version= "*" }
tor-netdoc = { path="../tor-netdoc", version= "*" }
tor-linkspec = { path="../tor-linkspec", version= "*" }
tor-llcrypto = { path="../tor-llcrypto", version= "*" }
tor-protover = { path="../tor-protover", version= "*" }

base64 = "0.13.0"
digest = "0.9.0"
hex = "0.4.2"
once_cell = "1.5.2"
rand = "0.7.3"
rusqlite = { version = "0.24.2", features = ["chrono"] }
signature = "1.2.2"
thiserror = "1.0.22"

[dev-dependencies]
hex-literal = "0.3.1"
simple-logging = "2.0.2"
